# rag_demo

./: pyproject.toml
rag_testing/: rag.py
